--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,34 @@
 {
-    "name": "zendframework/zend-module-manager",
-    "description": "Zend\\ModuleManager component",
+    "name": "zendframework/zend-modulemanager",
     "license": "BSD-3-Clause",
     "keywords": [
         "zf2",
-        "module-manager"
+        "modulemanager"
     ],
     "autoload": {
         "psr-4": {
-            "Zend\\ModuleManager\\": "src/"
+            "Zend\\ModuleManager": "src/"
         }
     },
     "require": {
-        "php": ">=5.3.23"
+        "php": ">=5.3.3",
+        "zendframework/zend-eventmanager": "self.version",
+        "zendframework/zend-stdlib": "self.version"
     },
-    "require-dev": {
-        "fabpot/php-cs-fixer": "1.7.*",
-        "satooshi/php-coveralls": "dev-master",
-        "phpunit/PHPUnit": "~4.0"
+    "suggest": {
+        "zendframework/zend-config": "Zend\\Config component",
+        "zendframework/zend-loader": "Zend\\Loader component",
+        "zendframework/zend-servicemanager": "Zend\\ServiceManager component"
     },
     "homepage": "https://github.com/zendframework/zend-module-manager",
     "autoload-dev": {
         "psr-4": {
             "ZendTest\\ModuleManager\\": "test/"
         }
+    },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "1.7.*",
+        "satooshi/php-coveralls": "dev-master",
+        "phpunit/PHPUnit": "~4.0"
     }
 }
