--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
         "zendframework/zend-loader": "Zend\\Loader component",
         "zendframework/zend-servicemanager": "Zend\\ServiceManager component"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.1-dev",
+            "dev-develop": "2.2-dev"
+        }
+    },
     "homepage": "https://github.com/zendframework/zend-module-manager",
     "autoload-dev": {
         "psr-4": {
